Fixed various implementation tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-logging.level.org.springframework.data.repository=TRACE
+logging.level.org.springframework.data.repository.*=TRACE
+logging.level.org.hibernate.type=TRACE
+logging.level.org.springframework.data.jpa.domain.Specification=TRACE
+logging.level.org.springframework.data.jpa.repository.JpaSpecificationExecutor=TRACE
